<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Login">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
       <TextView
        android:id="@+id/login_text"
        android:layout_width="381dp"
        android:layout_height="332dp"
        android:gravity="bottom"
        android:paddingBottom="10dp"
        android:text="@string/login"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="374dp"
        android:layout_height="87dp"
        android:layout_below="@+id/login_text"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/textbox_highlight"
        android:hint="@string/email" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="374dp"
        android:layout_height="85dp"
        android:layout_below="@+id/email"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/textbox_highlight"
        android:hint="@string/password" />

    <ProgressBar
        android:id="@+id/ProgressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/oval_background"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/Login_no"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="190dp"
        android:layout_marginTop="-150dp"
        android:gravity="center"
        android:paddingEnd="90sp"
        android:text="@string/login1"
        android:textColor="@color/material_dynamic_primary70"
        android:textSize="25sp"

        />


    <TextView
        android:id="@+id/text"
        android:layout_width="359dp"
        android:layout_height="34dp"
        android:layout_below="@id/login_btn"
        android:layout_marginStart="20dp"
        android:layout_marginTop="138dp"
        android:text="@string/dont_have_an_account"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/Register_now"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_alignEnd="@+id/text"
        android:layout_marginStart="19dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="-6dp"
        android:text="@string/register"
        android:textAlignment="center"

        android:textColor="@color/material_dynamic_primary70"
        android:textSize="25sp" />

         </RelativeLayout>
     </ScrollView>

</RelativeLayout>